Corrected the spacing to match the spec

--- a/src/cf-expandables/src/cf-expandables.less
+++ b/src/cf-expandables/src/cf-expandables.less
@@ -160,13 +160,13 @@
 
         .o-expandable_header {
             padding: unit( 10px / @base-font-size-px, em )
-                     unit( 16px / @base-font-size-px, em );
+                     unit( 15px / @base-font-size-px, em );
         }
 
         .o-expandable_content {
             // Margin collapsing trick for more consistent bottom padding.
             margin: 0
-                    unit( 16px / @base-font-size-px, em )
+                    unit( 15px / @base-font-size-px, em )
                     unit( 22px / @base-font-size-px, em );
 
             // The divider between _header and _content.
@@ -174,11 +174,11 @@
                 content: '';
                 display: block;
                 border-bottom: 1px solid @expandable__padded-divider;
-                margin-bottom: unit( 16px / @base-font-size-px, em );
+                margin-bottom: unit( 15px / @base-font-size-px, em );
             }
 
             &:after {
-                margin-bottom: unit( 16px / @base-font-size-px, em );
+                margin-bottom: unit( 15px / @base-font-size-px, em );
                 width: 100%;
             }
         }
